@@ -1,3 +1,4 @@
+1/23/14 Custom: don't collapse meter when collapse button is pressed, just hide pH picker
 1/23/14 fix: initial graph layout got hosed by non-zero initial volume
 1/23/14 Basics: auto-fill with a specified volume when a solute is selected. Set this to 0L for ph-scale-basics, 0.5L for ph-scale.
 1/23/14 fix: pH picker doesn't always disable properly at end of range, causes pH to exceed range
